--- a/order.html
+++ b/order.html
@@ -2,9 +2,8 @@
 <head>
 <title>Order</title>
 <style>
-button a{background-color:;
- padding:10px;ss
- color:;
+button a{
+ padding:10px;
  font-size:15px;
  cursor:pointer;
  text-decoration:none;
